# nightwatch

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.el.md  README.md  config.example.yaml  config.yaml  docker-compose.yml  nightwatch.py  pyproject.toml  requirements.txt  sentinel.py
.github/workflows/: ci.yml  monitor.yml
sentinel/: __init__.py  __main__.py  config.py  diffing.py  http.py  models.py  scheduler.py  storage.py
sentinel/notify/: __init__.py  base.py  ntfy.py
sentinel/sources/: __init__.py  base.py  github_releases.py  hackernews.py  rss.py  usgs.py
tests/: test_config.py  test_diffing.py  test_storage.py
