[project]
name = "sentinel-monitor"
version = "0.1.0"
description = "A legal-first, source-agnostic change-monitoring framework."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "George" }]
keywords = ["monitoring", "change-detection", "rss", "scraping", "ntfy"]
dependencies = [
    "httpx>=0.27",
    "PyYAML>=6.0",
    "feedparser>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.scripts]
sentinel = "sentinel.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sentinel"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
